добавил заголовок и сделал для него стили

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
    <p class="prog" >git + git.hub</p>
+   <h1>Hello</h1>
+   <p class="text">Это мой творой коммит. Не обращайте большого внимания :)</p>
 </body>
 </html>
